feat: upload images to supabase storage

--- a/backend.env.example
+++ b/backend.env.example
@@ -6,3 +6,9 @@ You can paste the Supabase "postgres://..." URL here.
 config.py will automatically convert postgres:// to postgresql+psycopg2://.
 Example:
 DB_URL=postgres://postgres:YOUR_PASSWORD@YOUR_HOST:5432/postgres?sslmode=require
+
+# Supabase storage (required for image uploads)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=YOUR_SERVICE_ROLE_KEY
+SUPABASE_PLANT_BUCKET=plant-images
+SUPABASE_DREAM_BUCKET=dream-images
