--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.417.0",
+    "recharts": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
