--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -24,6 +24,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.1.4"
   }
 }
