--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -17,12 +17,13 @@
     "@radix-ui/react-tooltip": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.417.0",
-    "recharts": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
+    "@types/react": "^19.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
